# axie-scholar-utilities

./: .gitignore  .travis.yml  CONTRIBUTING.md  README.md  SECURITY.md  axie_utils.ps1  docker_push.sh
.github/: FUNDING.yml  dependabot.yml
axie-scholar-utilities/source/: axie_scholar_cli.py  payments.json  pyproject.toml  secrets.json  transaction.json  trezor_axie_scholar_cli.py  trezor_config.json  trezor_test.py
axie-scholar-utilities/source/axie/: __init__.py  async_example.py  axie_abi.json  axies.py  breeding.py  claims.py  get_all_axies.py  main.py  min_abi.json  morphing.py  payments.py  qr_code.py  scatter.py  schemas.py  slp_abi.json  transfers.py  utils.py
axie-scholar-utilities/source/tests/: test_axie_axies.py  test_axie_breeding.py  test_axie_claims.py  test_axie_morph.py  test_axie_payments.py  test_axie_payments_manager.py  test_axie_transfers.py  test_axie_utils.py  test_cli.py  test_qr.py  test_schema_validation.py  test_utils.py
axie-scholar-utilities/source/tests/normal/: test_axie_axies.py  test_axie_breeding.py  test_axie_claims.py  test_axie_morph.py  test_axie_payments.py  test_axie_payments_summary.py  test_axie_transfers.py  test_axie_utils.py  test_cli.py  test_qr.py  test_scatter.py  test_schema_validation.py
axie-scholar-utilities/source/tests/test_data/: sample_payments_file.json  sample_secrets_file.json
axie-scholar-utilities/source/tests/trezor/: test_trezor_axie_breeding.py  test_trezor_axie_claims.py  test_trezor_axie_morph.py  test_trezor_axie_transfers.py  test_trezor_axie_utils.py  test_trezor_breeding.py  test_trezor_claims.py  test_trezor_cli.py  test_trezor_config.py  test_trezor_morph.py  test_trezor_payments.py  test_trezor_qr.py  test_trezor_scatter.py  test_trezor_transfers.py
axie-scholar-utilities/source/trezor/: __init__.py  accounts_setup.py  payments_trezor.py  slp_abi.json  trezor_breeding.py  trezor_claims.py  trezor_morphing.py  trezor_payments.py  trezor_qr_code.py  trezor_scatter.py  trezor_setup.py  trezor_transfers.py  trezor_utils.py
docs/: _config.yml  index.md
sample_data/: sample_breeding_file.csv  sample_breeding_file.json  sample_csv_payments_file.csv  (+7 more)
(+24 files in other folders)
