[tool.poetry]
name = "Axie Scholar Utilities"
version = "1.6"
description = "Package to automate activites related to manage Axie Infinity Scholars. Specially aimed at managers with large scholar roasters."
authors = ["Ferran Marin <ferran.marin.llobet@gmail.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.8"
docopt = "^0.6.2"
web3 = "^5.24.0"
jsonschema = "^3.2.0"

[tool.poetry.dev-dependencies]
mock = "^4.0.3"
pytest-mock = "^3.6.1"
pytest-asyncio = "^0.15.1"
requests-mock = "^1.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
